[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.75, 29.75 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 38, 0 )

[node name="NameLabel" type="Label" parent="."]
margin_left = -34.0
margin_top = 35.0
margin_right = 35.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
